fix Fabric and add Forge